; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_input.c_Preparse.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_input.c_Preparse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__*, i32, i32, i32 }
%struct.TYPE_3__ = type { i32 }

@DEMUX_IS_PLAYLIST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @Preparse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Preparse(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %3, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 3
  store i32* %9, i32** %4, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 2
  %12 = call i32 @vlc_interrupt_set(i32* %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @Init(i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %41, label %16

16:                                               ; preds = %1
  store i32 0, i32* %5, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i64 @input_item_ShouldPreparseSubItems(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %16
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @DEMUX_IS_PLAYLIST, align 4
  %29 = call i64 @demux_Control(i32 %27, i32 %28, i32* %5)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %22
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %31, %22, %16
  %33 = load i32, i32* %5, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %32
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @MainLoop(i32* %36, i32 0)
  br label %38

38:                                               ; preds = %35, %32
  %39 = load i32*, i32** %4, align 8
  %40 = call i32 @End(i32* %39)
  br label %41

41:                                               ; preds = %38, %1
  %42 = load i32*, i32** %4, align 8
  %43 = call i32 @input_SendEventDead(i32* %42)
  ret i8* null
}

declare dso_local i32 @vlc_interrupt_set(i32*) #1

declare dso_local i32 @Init(i32*) #1

declare dso_local i64 @input_item_ShouldPreparseSubItems(i32) #1

declare dso_local i64 @demux_Control(i32, i32, i32*) #1

declare dso_local i32 @MainLoop(i32*, i32) #1

declare dso_local i32 @End(i32*) #1

declare dso_local i32 @input_SendEventDead(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
